# ASWJ

./: .gitignore  CMakeLists.txt  README.md  build.sh  slicer
.github/: FUNDING.yml
docs/: part0.md  part1.md  part2.md  part3.md  part4.md  start.md
include/: core.h  debug.h  layer.h  primitives.h  vec3f.h
include/generator/: generator.h
include/stlparser/: stlparser.h
src/: debug.cpp  layer.cpp  main.cpp  primitives.cpp
src/generator/: generator.cpp
src/stlparser/: stlparser.cpp
tests/: facet.blend  gcode_interpreter.py  layerview.py
tests/gcode/: box.gcode  box_petg.gcode  cube.gcode
tests/stls/: box.stl  cube.stl  curved.stl  hole.stl  suzanne.stl
